# ukf

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  UnscentedKalmanFilter.py  pyproject.toml
.github/workflows/: lint-and-test.yml
src/ukf/: UKF_plotter.py  UnscentedKalmanFilter.py  __init__.py  trajectory_simulator.py  ukf_simulator.py
tests/: test_integration.py  test_placeholder.py  test_tajectory_simulator.py  test_ukf_model.py  test_ukf_plotter.py
