[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "UAV_ukf"
dynamic = ["version"]
description = "Unscented Kalman Filter library for UAV state estimation"
authors = [
  { name = "Awais Khan", email = "awaisk65@gmail.com" }
]
maintainers = [
  { name = "Awais Khan", email = "awaisk65@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy==1.24.4",
  "filterpy==1.4.5",
  "matplotlib==3.7.5"
]
keywords = ["ukf", "droneukf", "uavukf"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License"
]
